tests/parse_print/random_perturb/set01/change-04/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-04/change-04.essence line 1, column 20:
unexpected fini
expecting branching on, dot, end of input, find statement, given statement, letting statement, objective, such that statement, or where statement
    line 1, column 20
    language Essence 1.3
                    ^^^^^^^